feat: add effect hover, focus-visible and active un section categories

--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -5,9 +5,9 @@
       <li class="categories__card-item categories__card-item--sofas">
         <article class="categories__card-content">
           <ul class="list-reset categories__card-content-list">
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Прямые</a></li>
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Угловые</a></li>
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Модульные</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Прямые</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Угловые</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Модульные</a></li>
           </ul>
           <h3 class="categories__card-content-title">Диваны</h3>
           <picture class="categories__card-content-picture">
@@ -37,8 +37,8 @@
       <li class="categories__card-item categories__card-item--chairs">
         <article class="categories__card-content">
           <ul class="list-reset categories__card-content-list">
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Мягкие</a></li>
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Кресла-кровати</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Мягкие</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Кресла-кровати</a></li>
           </ul>
           <h3 class="categories__card-content-title">Кресла</h3>
           <picture class="categories__card-content-picture">
@@ -68,8 +68,8 @@
       <li class="categories__card-item categories__card-item--beds">
         <article class="categories__card-content">
           <ul class="list-reset categories__card-content-list">
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Односпальные</a></li>
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Двуспальные</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Односпальные</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Двуспальные</a></li>
           </ul>
           <h3 class="categories__card-content-title">Кровати</h3>
           <picture class="categories__card-content-picture">
@@ -99,8 +99,8 @@
       <li class="categories__card-item categories__card-item--curbstones">
         <article class="categories__card-content">
           <ul class="list-reset categories__card-content-list">
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Тумбы</a></li>
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Комоды</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Тумбы</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Комоды</a></li>
           </ul>
           <h3 class="categories__card-content-title">Тумбы и комоды</h3>
           <picture class="categories__card-content-picture">
@@ -130,8 +130,8 @@
       <li class="categories__card-item categories__card-item--seat">
         <article class="categories__card-content">
           <ul class="list-reset categories__card-content-list">
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Деревянные</a></li>
-            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Металлокаркас</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Деревянные</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Металлокаркас</a></li>
           </ul>
           <h3 class="categories__card-content-title">Стулья</h3>
           <picture class="categories__card-content-picture">
