feat: add adaptive 1024 in section categories

--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -41,7 +41,7 @@
             <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Кресла-кровати</a></li>
           </ul>
           <h3 class="categories__card-content-title">Кресла</h3>
-          <picture class="categories__card-content-picture">
+          <picture class="categories__card-content-picture categories__card-content-picture--chairs">
             <source srcset="img/categories/2categories320@x1.avif, img/categories/2categories320@x2.avif 2x, img/categories/2categories320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
             <source srcset="img/categories/2categories320@x1.webp, img/categories/2categories320@x2.webp 2x, img/categories/2categories320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
             <source srcset="img/categories/2categories320@x1.png, img/categories/2categories320@x2.png 2x, img/categories/2categories320@x3.png 3x" media="(max-width: 576px)">
@@ -72,7 +72,7 @@
             <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Двуспальные</a></li>
           </ul>
           <h3 class="categories__card-content-title">Кровати</h3>
-          <picture class="categories__card-content-picture">
+          <picture class="categories__card-content-picture categories__card-content-picture--beds">
             <source srcset="img/categories/3categories320@x1.avif, img/categories/3categories320@x2.avif 2x, img/categories/3categories320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
             <source srcset="img/categories/3categories320@x1.webp, img/categories/3categories320@x2.webp 2x, img/categories/3categories320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
             <source srcset="img/categories/3categories320@x1.png, img/categories/3categories320@x2.png 2x, img/categories/3categories320@x3.png 3x" media="(max-width: 576px)">
@@ -103,7 +103,7 @@
             <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Комоды</a></li>
           </ul>
           <h3 class="categories__card-content-title">Тумбы и комоды</h3>
-          <picture class="categories__card-content-picture">
+          <picture class="categories__card-content-picture categories__card-content-picture--curbstones">
             <source srcset="img/categories/4categories320@x1.avif, img/categories/4categories320@x2.avif 2x, img/categories/4categories320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
             <source srcset="img/categories/4categories320@x1.webp, img/categories/4categories320@x2.webp 2x, img/categories/4categories320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
             <source srcset="img/categories/4categories320@x1.png, img/categories/4categories320@x2.png 2x, img/categories/4categories320@x3.png 3x" media="(max-width: 576px)">
@@ -134,7 +134,7 @@
             <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link" tabindex="-1">Металлокаркас</a></li>
           </ul>
           <h3 class="categories__card-content-title">Стулья</h3>
-          <picture class="categories__card-content-picture">
+          <picture class="categories__card-content-picture categories__card-content-picture--seat">
             <source srcset="img/categories/5categories320@x1.avif, img/categories/5categories320@x2.avif 2x, img/categories/5categories320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
             <source srcset="img/categories/5categories320@x1.webp, img/categories/5categories320@x2.webp 2x, img/categories/5categories320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
             <source srcset="img/categories/5categories320@x1.png, img/categories/5categories320@x2.png 2x, img/categories/5categories320@x3.png 3x" media="(max-width: 576px)">
@@ -146,7 +146,7 @@
             <source srcset="img/categories/5categories1024@x1.png, img/categories/5categories1024@x2.png 2x, img/categories/5categories1024@x3.png 3x" media="(max-width: 1024px)">
             <source srcset="img/categories/5categories1920@x1.avif, img/categories/5categories1920@x2.avif 2x, img/categories/5categories1920@x3.avif 3x" type="image/avif">
             <source srcset="img/categories/5categories1920@x1.webp, img/categories/5categories1920@x2.webp 2x, img/categories/5categories1920@x3.webp 3x" type="image/webp">
-            <img loading="lazy" src="img/categories/5categories1920@x1.png" srcset="img/categories/5categories1920@x2.png 2x, img/categories/5categories1920@x3.png 3x" class="categories__card-content-image" width="258" height="308" alt="Изображение дивана">
+            <img loading="lazy" src="img/categories/5categories1920@x1.png" srcset="img/categories/5categories1920@x2.png 2x, img/categories/5categories1920@x3.png 3x" class="categories__card-content-image categories__card-content-image--seat" width="258" height="308" alt="Изображение дивана">
           </picture>
           <a href="#no-scrolling" class="categories__card-content-link">
             <span class="categories__card-content-link-text">В каталог</span>
