--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,7 +1,7 @@
 .card {
 
   &__item {
-    padding: 30px;
+    padding: 30px 30px 30px 30px;
     border-radius: 10px;
     background-color: var(--grey-light-color);
   }
