feat: add adaptive 768 in section categories

--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -53,7 +53,7 @@
             <source srcset="img/categories/2categories1024@x1.png, img/categories/2categories1024@x2.png 2x, img/categories/2categories1024@x3.png 3x" media="(max-width: 1024px)">
             <source srcset="img/categories/2categories1920@x1.avif, img/categories/2categories1920@x2.avif 2x, img/categories/2categories1920@x3.avif 3x" type="image/avif">
             <source srcset="img/categories/2categories1920@x1.webp, img/categories/2categories1920@x2.webp 2x, img/categories/2categories1920@x3.webp 3x" type="image/webp">
-            <img loading="lazy" src="img/categories/2categories1920@x1.png" srcset="img/categories/2categories1920@x2.png 2x, img/categories/2categories1920@x3.png 3x" class="categories__card-content-image" width="515" height="308" alt="Изображение кресла">
+            <img loading="lazy" src="img/categories/2categories1920@x1.png" srcset="img/categories/2categories1920@x2.png 2x, img/categories/2categories1920@x3.png 3x" class="categories__card-content-image categories__card-content-image--chairs" width="515" height="308" alt="Изображение кресла">
           </picture>
           <a href="#no-scrolling" class="categories__card-content-link">
             <span class="categories__card-content-link-text">В каталог</span>
@@ -79,6 +79,9 @@
             <source srcset="img/categories/3categories768@x1.avif, img/categories/3categories768@x2.avif 2x, img/categories/3categories768@x3.avif 3x" media="(max-width: 768px)" type="image/avif">
             <source srcset="img/categories/3categories768@x1.webp, img/categories/3categories768@x2.webp 2x, img/categories/3categories768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
             <source srcset="img/categories/3categories768@x1.png, img/categories/3categories768@x2.png 2x, img/categories/3categories768@x3.png 3x" media="(max-width: 768px)">
+            <source srcset="img/categories/3categories992@x1.avif, img/categories/3categories992@x2.avif 2x, img/categories/3categories992@x3.avif 3x" media="(max-width: 992px)" type="image/avif">
+            <source srcset="img/categories/3categories992@x1.webp, img/categories/3categories992@x2.webp 2x, img/categories/3categories992@x3.webp 3x" media="(max-width: 992px)" type="image/webp">
+            <source srcset="img/categories/3categories992@x1.png, img/categories/3categories992@x2.png 2x, img/categories/3categories992@x3.png 3x" media="(max-width: 992px)">
             <source srcset="img/categories/3categories1024@x1.avif, img/categories/3categories1024@x2.avif 2x, img/categories/3categories1024@x3.avif 3x" media="(max-width: 1024px)" type="image/avif">
             <source srcset="img/categories/3categories1024@x1.webp, img/categories/3categories1024@x2.webp 2x, img/categories/3categories1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
             <source srcset="img/categories/3categories1024@x1.png, img/categories/3categories1024@x2.png 2x, img/categories/3categories1024@x3.png 3x" media="(max-width: 1024px)">
@@ -115,7 +118,7 @@
             <source srcset="img/categories/4categories1024@x1.png, img/categories/4categories1024@x2.png 2x, img/categories/4categories1024@x3.png 3x" media="(max-width: 1024px)">
             <source srcset="img/categories/4categories1920@x1.avif, img/categories/4categories1920@x2.avif 2x, img/categories/4categories1920@x3.avif 3x" type="image/avif">
             <source srcset="img/categories/4categories1920@x1.webp, img/categories/4categories1920@x2.webp 2x, img/categories/4categories1920@x3.webp 3x" type="image/webp">
-            <img loading="lazy" src="img/categories/4categories1920@x1.png" srcset="img/categories/4categories1920@x2.png 2x, img/categories/4categories1920@x3.png 3x" class="categories__card-content-image" width="330" height="308" alt="Изображение дивана">
+            <img loading="lazy" src="img/categories/4categories1920@x1.png" srcset="img/categories/4categories1920@x2.png 2x, img/categories/4categories1920@x3.png 3x" class="categories__card-content-image categories__card-content-image--curbstones" width="330" height="308" alt="Изображение дивана">
           </picture>
           <a href="#no-scrolling" class="categories__card-content-link">
             <span class="categories__card-content-link-text">В каталог</span>
