--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,4 +17,5 @@
 @import "./components/rating";
 @import "./components/oxford";
 @import "./components/categories";
+@import "./components/useful";
 
