--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -68,6 +68,7 @@
     <form action="#" class="header__form">
       <label class="header__form-label">
         <input type="text" name="Имя" class="input-reset header__form-input" placeholder="Я хочу купить...">
+      </label>
         <svg class="header__form-search">
           <use xlink:href="img/sprite.svg#search"></use>
         </svg>
@@ -76,20 +77,19 @@
             <use xlink:href="img/sprite.svg#arrowSearch"></use>
           </svg>
         </button>
-      </label>
     </form>
     <div class="header__categories">
       <select class="header__сategories-select" aria-label="Выбрать мебель">
         <option value="">Категория</option>
-        <option><a>Диваны</a></option>
-        <option><a>Кресла</a></option>
-        <option><a>Пуфы</a></option>
-        <option><a>Кровати</a></option>
-        <option><a>Тумбы</a></option>
-        <option><a>Комоды</a></option>
-        <option><a>Стулья</a></option>
-        <option><a>Столы</a></option>
-        <option><a>Аксессуары</a></option>
+        <option value="Диваны">Диваны</option>
+        <option value="Комоды">Комоды</option>
+        <option value="Кресла">Кресла</option>
+        <option value="Стулья">Стулья</option>
+        <option value="Пуфы">Пуфы</option>
+        <option value="Столы">Столы</option>
+        <option value="Кровати">Кровати</option>
+        <option value="Аксессуары">Аксессуары</option>
+        <option value="Тумбы">Тумбы</option>
       </select>
     </div>
     <div class="header__usershop">
