--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -1,5 +1,6 @@
 .categories {
   padding-top: 67px;
+  padding-bottom: 35px;
 
   @include mobile {
     & {
@@ -149,7 +150,7 @@
       &-list {
         display: flex;
         column-gap: 30px;
-        margin-bottom: 14px;
+        margin-bottom: 13px;
 
         @include tablet {
           & {
@@ -284,7 +285,7 @@
 
       &-link {
         position: relative;
-        margin-top: 26px;
+        margin-top: 27px;
 
         @include mobile {
           & {
