feat: add adaptive 1024 and 768 in section useful

--- a/src/partials/useful.html
+++ b/src/partials/useful.html
@@ -51,7 +51,7 @@
           </picture>
           <div class="useful__slide-content">
             <p class="useful__slide-text">
-              Ясность нашей позиции очевидна: укрепление и развитие внутренней структуры?
+              Ясность нашей позиции очевидна: укрепление <no-typography>и</no-typography> развитие внутренней структуры?
             </p>
             <a href="#no-scrolling" class="btn-reset btn-all useful__slide-link">Читать</a>
           </div>
