--- a/src/scss/components/_useful.scss
+++ b/src/scss/components/_useful.scss
@@ -2,6 +2,14 @@
   padding-top: 34px;
   padding-bottom: 35px;
 
+  @include mobile {
+    & {
+      position: relative;
+      padding-top: 38px;
+      padding-bottom: 48px;
+    }
+  }
+
   &__wrapper {
     display: flex;
     align-items: flex-start;
@@ -20,6 +28,13 @@
         margin-bottom: 26.2px;
       }
     }
+
+    @include mobile {
+      & {
+        margin-bottom: 25.5px;
+        font-size: 24px;
+      }
+    }
   }
 
   &__controls {
@@ -27,6 +42,14 @@
     align-items: center;
     justify-content: space-between;
     width: 77px;
+
+    @include mobile {
+      & {
+        position: absolute;
+        bottom: 0px;
+        left: 38.2%;
+      }
+    }
 
     &-btn {
       width: 32px;
@@ -131,7 +154,6 @@
 
       @include tablet {
         & {
-          max-width: 228px;
           font-size: 16px;
           line-height: 22px;
         }
