--- a/src/scss/components/_useful.scss
+++ b/src/scss/components/_useful.scss
@@ -168,6 +168,23 @@
           padding: 17px 33.4px;
         }
       }
+
+      @include hover {
+        +& {
+          color: var(--white-color);
+          background-color: var(--primary-color);
+        }
+      }
+
+      &:focus-visible:not(:hover):not(:active) {
+        color: var(--white-color);
+        background-color: var(--primary-light-color);
+      }
+
+      &:active {
+        border-color: var(--primary-shade-color);
+        background-color: var(--primary-shade-color);
+      }
     }
   }
 }
