feat: add section feedback and add form section feedback

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,4 +18,5 @@
 @import "./components/oxford";
 @import "./components/categories";
 @import "./components/useful";
+@import "./components/feedback";
 
