feat: add adaptive 1920 in section feedback

--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -24,6 +24,11 @@
           </div>
         </form>
       </div>
+      <picture class="feedback__wrapper-picture">
+        <source srcset="img/feedback/feedback@1920x1.avif" type="image/avif">
+        <source srcset="img/feedback/feedback@1920x1.webp" type="image/webp">
+        <img loading="lazy" src="img/feedback/feedback@1920x1.png" srcset="img/feedback/feedback@1920x2.png 2x, img/feedback/feedback@1920x3.png 3x" class="feedback__wrapper-image" width="624" height="383" alt="Фоновая картинка">
+      </picture>
     </div>
   </div>
 </section>
