feat: add tooltip in section feddback

--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -12,4 +12,8 @@
 // стили для свайпера
 @import "../../node_modules/swiper/swiper-bundle.min";
 
+// стили для tippy.js
+@import '../../node_modules/tippy.js/animations/scale';
+@import '../../node_modules/tippy.js/dist/tippy';
+
 
