--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -3,7 +3,20 @@
     <div class="feedback__wrapper">
       <div class="feedback__wrapper-content">
         <h2 class="section-title feedback__wrapper-title">Мы всегда вам рады!</h2>
-        <p class="feedback__wrapper-text">Безусловно, новая модель организационной деятельности в значительной степени обусловливает важность распределения внутренних резервов и ресурсов.</p>
+        <p class="feedback__wrapper-text">Безусловно, новая модель организационной деятельности в значительной степени обусловливает важность распределения внутренних резервов и ресурсов.
+          <span class="tooltip">
+            <button class="btn-reset tooltip__btn tippy-tooltip" data-template="one">
+              <svg class="tooltip__btn-image">
+                <use xlink:href="img/sprite.svg#tooltip"></use>
+              </svg>
+            </button>
+            <div class="tooltip-hidden">
+              <div id="one">
+                <strong>Реплицированные с зарубежных источников, исследования формируют глобальную сеть.</strong>
+              </div>
+            </div>
+          </span>
+        </p>
         <form action="#" class="form feedback__form">
           <label class="feedback__form-label">
             <input type="text" name="Имя" class="input-reset feedback__form-input input-name" placeholder="Как вас зовут?">
@@ -25,8 +38,8 @@
         </form>
       </div>
       <picture class="feedback__wrapper-picture">
-        <source srcset="img/feedback/feedback@1920x1.avif" type="image/avif">
-        <source srcset="img/feedback/feedback@1920x1.webp" type="image/webp">
+        <source srcset="img/feedback/feedback@1920x1.avif, img/feedback/feedback@1920x2.avif 2x, img/feedback/feedback@1920x3.avif 3x" type="image/avif">
+        <source srcset="img/feedback/feedback@1920x1.webp, img/feedback/feedback@1920x2.web 2x, img/feedback/feedback@1920x3.webp 3x" type="image/webp">
         <img loading="lazy" src="img/feedback/feedback@1920x1.png" srcset="img/feedback/feedback@1920x2.png 2x, img/feedback/feedback@1920x3.png 3x" class="feedback__wrapper-image" width="624" height="383" alt="Фоновая картинка">
       </picture>
     </div>
