--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "./components/nav";
 @import "./components/customPagination";
 @import "./components/btns";
+@import "./components/tooltip";
 @import "./components/burger";
 @import "./components/card";
 @import "./components/header";
