feat: add adaptive mobile and 768 in section feddback

--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -38,8 +38,11 @@
         </form>
       </div>
       <picture class="feedback__wrapper-picture">
+        <source srcset="img/feedback/feedback@768x1.avif, img/feedback/feedback@768x2.avif 2x, img/feedback/feedback@768x3.avif 3x" type="image/avif" media="(max-width: 992px)">
+        <source srcset="img/feedback/feedback@768x1.webp, img/feedback/feedback@768x2.webp 2x, img/feedback/feedback@768x3.webp 3x" type="image/webp" media="(max-width: 992px)">
+        <source srcset="img/feedback/feedback@768x1.png, img/feedback/feedback@768x2.png 2x, img/feedback/feedback@768x3.png 3x" type="image/webp" media="(max-width: 992px)">
         <source srcset="img/feedback/feedback@1920x1.avif, img/feedback/feedback@1920x2.avif 2x, img/feedback/feedback@1920x3.avif 3x" type="image/avif">
-        <source srcset="img/feedback/feedback@1920x1.webp, img/feedback/feedback@1920x2.web 2x, img/feedback/feedback@1920x3.webp 3x" type="image/webp">
+        <source srcset="img/feedback/feedback@1920x1.webp, img/feedback/feedback@1920x2.webp 2x, img/feedback/feedback@1920x3.webp 3x" type="image/webp">
         <img loading="lazy" src="img/feedback/feedback@1920x1.png" srcset="img/feedback/feedback@1920x2.png 2x, img/feedback/feedback@1920x3.png 3x" class="feedback__wrapper-image" width="624" height="383" alt="Фоновая картинка">
       </picture>
     </div>
