feat: add section footer

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,4 +20,5 @@
 @import "./components/categories";
 @import "./components/useful";
 @import "./components/feedback";
+@import "./components/footer";
 
