--- a/src/scss/components/_tooltip.scss
+++ b/src/scss/components/_tooltip.scss
@@ -1,6 +1,7 @@
 .tooltip {
 
   &__btn {
+    position: relative;
     width: 14px;
     height: 14px;
     display: inline-flex;
@@ -8,7 +9,7 @@
     justify-content: center;
     border-radius: 100px;
     border: 2px solid var(--secondary-color);
-    transition: background-color .3s ease-in-out;
+    transition: background-color .3s ease-in-out, border-color .3s ease-in-out;
 
     @include hover {
       +& {
@@ -18,6 +19,34 @@
       +& .tooltip__btn-image {
         fill: var(--white-color);
       }
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: -5px;
+      right: 0;
+      bottom: 0;
+      left: -5px;
+      width: calc(100% + 10px);
+      height: 20px;
+      background-color: var(--primary-light-color);
+      transform: translate(0, 0) scaleX(0);
+      transform-origin: center;
+      transition: transform .3s ease-in-out;
+      z-index: -1;
+    }
+
+    &:focus-visible:not(:active):not(:hover)::before {
+      transform: translate(0, 0) scaleX(1);
+    }
+
+    &:focus-visible:not(:active):not(:hover) {
+      border-color: var(--white-color);
+    }
+
+    &:focus-visible:not(:active):not(:hover) .tooltip__btn-image  {
+      fill: var(--white-color);
     }
 
     &-image {
