--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -14,7 +14,14 @@
 
   &__link {
     display: inline-block;
-    margin-bottom: 28px;
+    margin-top: -2px;
+    margin-left: -2px;
+    margin-bottom: 26px;
+    border: 2px solid transparent;
+
+    &:focus-visible:not(:hover):not(:active) {
+      border-color: var(--primary-color);
+    }
   }
 
   &__social {
@@ -25,11 +32,49 @@
     gap: 1.25rem;
 
     &-link {
+      position: relative;
+      z-index: 0;
+      transition: background-color .3s ease-in-out;
 
       &-img {
         width: 30px;
         height: 30px;
         fill: var(--grey-color);
+        transition: fill .3s ease-in-out;
+
+        @include hover {
+          +& {
+            fill: var(--primary-color);
+          }
+        }
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: -16px;
+        right: 0px;
+        bottom: 0;
+        left: -3px;
+        width: 36px;
+        height: 36px;
+        background-color: var(--primary-light-color);
+        transform: translate(0, 0) scaleX(0);
+        transform-origin: center;
+        transition: transform .3s ease-in-out;
+        z-index: -1;
+      }
+
+      &:focus-visible:not(:active):not(:hover)::before {
+        transform: translate(0, 0) scaleX(1);
+      }
+
+      &:focus-visible:not(:hover):not(:active) .footer__social-link-img {
+        fill: var(--white-color);
+      }
+
+      &:active .footer__social-link-img {
+        fill: var(--primary-shade-color);
       }
     }
   }
@@ -74,10 +119,47 @@
     }
 
     &-link {
+      position: relative;
       font-weight: 400;
       font-size: 14px;
       line-height: 100%;
       color: var(--grey-color);
+      transition: color .3s ease-in-out, background-color .3s ease-in-out;;
+      z-index: 0;
+
+      @include hover {
+        +& {
+          color: var(--primary-color);
+        }
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: -10px;
+        width: calc(100% + 20px);
+        height: 100%;
+        background-color: var(--primary-light-color);
+        transform: translate(0, 0) scaleX(0);
+        transform-origin: center;
+        transition: transform .3s ease-in-out;
+        z-index: -1;
+      }
+
+      &:focus-visible:not(:active):not(:hover)::before {
+        transform: translate(0, 0) scaleX(1);
+      }
+
+      &:focus-visible {
+        color: var(--night-rider-color);
+      }
+
+      &:active {
+        color: var(--primary-shade-color);
+      }
     }
   }
 
