--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="footer__wrap">
     <div class="container footer__container">
       <div class="footer__content">
-        <a href="#no-scrolling" class="footer__link">
+        <a href="index.html" class="footer__link">
           <img loading="lazy" src="img/logo.svg" class="footer__image" width="187" height="27"
             alt="Логотип сети магазинов SitDownPls">
         </a>
@@ -54,7 +54,7 @@
           <li class="footer__nav-item footer__nav-item--column4">
             <h3 class="footer__nav-title">Сотрудничество</h3>
             <ul class="list-reset footer__menu-list">
-              <li class="footer__menu-item"><a href="#no-scrolling" class="footer__menu-link">Поставщикам</a></li>
+              <li class="footer__menu-item"><a href="interpreter.html" class="footer__menu-link">Поставщикам</a></li>
               <li class="footer__menu-item"><a href="#no-scrolling" class="footer__menu-link">Оптовикам</a></li>
               <li class="footer__menu-item"><a href="#no-scrolling" class="footer__menu-link">Карьера</a></li>
             </ul>
