--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,7 +27,7 @@
       </li>
     </ul>
 
-    <a href="#" class="header__link-logo"><img loading="lazy" src="img/logo.svg" class="header__img-logo" width="187"
+    <a href="index.html" class="header__link-logo"><img loading="lazy" src="img/logo.svg" class="header__img-logo" width="187"
         height="27" alt="Логотип сети магазинов SitDownPls"></a>
 
     <div class="header__wrap-nav">
@@ -43,7 +43,7 @@
           </svg>
         </button>
         <ul class="list-reset header__nav-list">
-          <li class="header__nav-item"><a href="#" class="header__nav-link" data-menu-item data-scroll>Каталог</a></li>
+          <li class="header__nav-item"><a href="catalog.html" class="header__nav-link" data-menu-item data-scroll>Каталог</a></li>
           <li class="header__nav-item"><a href="#" class="header__nav-link" data-menu-item data-scroll>Магазины</a></li>
           <li class="header__nav-item"><a href="#" class="header__nav-link" data-menu-item data-scroll>Шоу-рум</a></li>
           <li class="header__nav-item"><a href="#" class="header__nav-link" data-menu-item data-scroll>Доставка и оплата</a></li>
