feat: add breadcrumbs in page interpreter

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,4 +21,6 @@
 @import "./components/useful";
 @import "./components/feedback";
 @import "./components/footer";
+@import "./components/breadcrumbs";
+@import "./components/suppliers";
 
