feat: add section suppliers and profit

--- a/src/partials/suppliers.html
+++ b/src/partials/suppliers.html
@@ -1,5 +1,11 @@
 <section class="suppliers">
   <div class="container">
-    <h2 class="section-title suppliers__title">Сотрудничество</h2>
+    <h1 class="section-title suppliers__title">Сотрудничество</h1>
+    <div class="suppliers__content">
+      <h2 class="suppliers__subtitle">Поставщикам</h2>
+      <p class="suppliers__text">
+        При планировании обстановки торгового помещения важно обустроить его с комфортом для покупателей: грамотно зонировать, обеспечить эффективную демонстрацию и хранение товаров в зале. Если вам необходимо комплексное оснащение, организация зоны отдыха или отдельные предметы меблировки для поддержания эффективной торговой деятельности, мы поможем выбрать продукцию с учетом нагрузки от поступающего трафика.
+      </p>
+    </div>
   </div>
 </section>
