--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,4 +23,5 @@
 @import "./components/footer";
 @import "./components/breadcrumbs";
 @import "./components/suppliers";
+@import "./components/profit";
 
