feat: add section advantages

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,4 +24,5 @@
 @import "./components/breadcrumbs";
 @import "./components/suppliers";
 @import "./components/profit";
+@import "./components/advantages";
 
