feat: add section guarantees

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,4 +25,5 @@
 @import "./components/suppliers";
 @import "./components/profit";
 @import "./components/advantages";
+@import "./components/guarantees";
 
